@@ -29,4 +29,5 @@ dependencies {
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
